`$muted` and `$border-color` color unify, dark mode fixes

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,6 +1,6 @@
 $border-values: (
-  null: $border-width var(--#{$prefix}border-style) $border-color-translucent,
-  wide: $border-width-wide var(--#{$prefix}border-style) $border-color-translucent,
+  null: $border-width var(--#{$prefix}border-style) var(--#{$prefix}border-color),
+  wide: $border-width-wide var(--#{$prefix}border-style) var(--#{$prefix}border-color),
   0: 0,
 );
 
