--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -14,7 +14,7 @@ body:not(.theme-dark) .hide-theme-light {
   & {
     --#{$prefix}body-color: #{$dark-mode-text};
     --#{$prefix}body-color-rgb: #{to-rgb($dark-mode-text)};
-    --#{$prefix}muted: rgba(153, 159, 164, 1);
+    --#{$prefix}muted: #{$dark-mode-muted};
 
     --#{$prefix}body-bg: #{$dark-mode-darken};
     --#{$prefix}body-bg-rgb: #{to-rgb($dark-mode-darken)};
@@ -36,7 +36,7 @@ body:not(.theme-dark) .hide-theme-light {
     --#{$prefix}card-color: #{$dark-mode-text};
 
     --#{$prefix}border-color: var(--#{$prefix}dark-mode-border-color);
-    --#{$prefix}border-color-light: var(--#{$prefix}dark-mode-border-color-light);
+    --#{$prefix}border-color-dark: var(--#{$prefix}dark-mode-border-color);
     --#{$prefix}border-color-active: var(--#{$prefix}dark-mode-border-color-active);
 
     --#{$prefix}btn-color: #{$dark-mode-darken};
