--- a/src/scss/layout/_root.scss
+++ b/src/scss/layout/_root.scss
@@ -16,7 +16,7 @@
   --#{$prefix}bg-forms: var(--#{$prefix}bg-surface);
 
   --#{$prefix}border-color: #{$border-color};
-  --#{$prefix}border-color-light: #{$border-color-light};
+  --#{$prefix}border-color-dark: #{$border-color-dark};
   --#{$prefix}border-color-active: #{$border-color-active};
 
   --#{$prefix}icon-color: #{$icon-color};
@@ -29,6 +29,8 @@
   --#{$prefix}code-color: #{$code-color};
   --#{$prefix}code-bg: #{$code-bg};
 
+  --#{$prefix}dark-mode-text: #{$dark-mode-text};
+  --#{$prefix}dark-mode-muted: #{$dark-mode-muted};
   --#{$prefix}dark-mode-border-color: #{$dark-mode-border-color};
   --#{$prefix}dark-mode-border-color-light: #{$dark-mode-border-color-light};
   --#{$prefix}dark-mode-border-color-active: #{$dark-mode-border-color-active};
