--- a/src/scss/ui/_accordion.scss
+++ b/src/scss/ui/_accordion.scss
@@ -8,10 +8,6 @@
     box-shadow: none;
   }
 
-  &:after {
-    opacity: $text-muted-opacity;
-  }
-
   &:not(.collapsed) {
     font-weight: var(--#{$prefix}font-weight-bold);
     border-bottom-color: transparent;
