--- a/src/scss/ui/_dropdowns.scss
+++ b/src/scss/ui/_dropdowns.scss
@@ -27,7 +27,6 @@
   height: $icon-size !important;
   margin-right: .5rem;
   color: var(--#{$prefix}muted);
-  opacity: $text-muted-opacity;
   text-align: center;
 }
 
